<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_background" />

    <TextView
        android:id="@+id/textViewGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/game_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:text="@string/button_new_game_text"
        app:layout_constraintBottom_toTopOf="@+id/button_load_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameTitle" />

    <Button
        android:id="@+id/button_load_game"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/button_load_game_text"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_game" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/button_settings_text"
        app:layout_constraintBottom_toTopOf="@+id/button_achievements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_load_game" />

    <Button
        android:id="@+id/button_achievements"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/button_achievements_text"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button_exit_text"
        android:onClick="exitGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_achievements" />

</androidx.constraintlayout.widget.ConstraintLayout>